# Fjord

./: .SRCINFO  .gitignore  CMakeLists.txt  Fjord.h  Makefile  PKGBUILD  README.md  TODO.md  TODO.txt  build.sh  install-deps.sh  make.sh  msgs.txt  test.cpp
docs/: main.md
example/: api.lua  keyMap.json  main-scene.scene  main.cpp  node.cpp  node1.cpp  square.lua
glad/include/glad/: glad.h
glad/src/: glad.c
lib/: Fjord.h  Input.h  Node.h  RendererGL.cpp  RendererGL.h  ShaderManager.cpp  ShaderManager.h  engine.cpp  fjordusr.h  init.cpp  main.cpp  renderer.cpp  renderer.h  test.cpp  utilities.cpp  utilities.h
lib/dat/: Color.h  Input.cpp  Input.h  Script.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  shape.cpp  shape.h
lib/datatypes/: Vector2.cpp  Vector2.h  vector2.cpp
lib/def/: physics-defaults.yaml
lib/lua/: api.lua  lua_bindings.cpp  lua_bindings.h
lib/node/: Label.cpp  Label.h  Node.cpp  Node.h  Polygon.cpp  Polygon.h
lib/node/physics/: collision_object.cpp  collision_object.h  static_body.cpp  static_body.h
lib/shaders/: vertex_shader.glsl
make/: CMakeCache.txt  Makefile  cmake_install.cmake
